--- a/package.json
+++ b/package.json
@@ -50,17 +50,23 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "autoprefixer": "^10.0.1",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/runtime": "^7.7.6",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-import-bangtext-node": "^0.1.4",
+    "fingerprintjs2sync": "^1.5.9",
     "gulp-replace": "^1.0.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.29.1",
+    "ractive": "^1.3.12",
+    "ractive-events-tap": "^0.3.2",
+    "ractive-transitions-fade": "^0.3.1",
+    "raw-loader": "^4.0.2",
     "request-promise": "^4.2.5",
     "terser-webpack-plugin": "^4.2.2",
     "uglifyjs-webpack-plugin": "^2.2.0"
